[package]
name = "test-harness-bdd"
version = "0.0.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"
authors = ["llama-orch contributors"]

[[bin]]
name = "bdd-runner"
path = "src/main.rs"

[dependencies]
cucumber = { version = "0.20", features = ["macros"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"
async-trait = "0.1"
uuid = { workspace = true }
shellexpand = "3"
shlex = "1.3"  # TEAM-049: Proper shell argument parsing with quote handling
clap = { version = "4", features = ["derive"] }  # TEAM-059: CLI args for mock-worker

[dev-dependencies]
insta = { workspace = true }
