[package]
name = "test-harness-bdd"
version = "0.0.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"
authors = ["llama-orch contributors"]

# TEAM-076: Converted from binary to library crate
# BDD tests now run as integration tests via tests/cucumber.rs
# Run with: cargo test

[lib]
name = "test_harness_bdd"
path = "src/lib.rs"

[dependencies]
cucumber = { version = "0.20", features = ["macros"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3"
async-trait = "0.1"
uuid = { workspace = true }
shlex = "1.3"  # TEAM-049: Proper shell argument parsing with quote handling
clap = { version = "4", features = ["derive"] }  # TEAM-059: CLI args for mock-worker
nix = { version = "0.27", features = ["signal", "process"] }  # TEAM-062: Process management for error handling

# TEAM-063: Real product dependencies for integration testing
rbee-hive = { path = "../../bin/rbee-hive" }
llm-worker-rbee = { path = "../../bin/llm-worker-rbee" }
hive-core = { path = "../../bin/shared-crates/hive-core" }
# TEAM-079: Added model-catalog for testing
# TEAM-086: Fixed path - model-catalog moved to shared-crates
model-catalog = { path = "../../bin/shared-crates/model-catalog" }
# TEAM-085: Narration verification
observability-narration-core = { path = "../../bin/shared-crates/narration-core", features = ["test-support"] }
# TEAM-079: queen-rbee temporarily disabled due to SQLite version conflict
# TEAM-080: Re-enabled after upgrading queen-rbee rusqlite to 0.32 (libsqlite3-sys 0.28)
queen-rbee = { path = "../../bin/queen-rbee" }

[dev-dependencies]
insta = { workspace = true }
