[package]
name = "test-harness-determinism-suite"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "determinism-suite"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
proptest = { workspace = true }
