[package]
name = "test-harness-e2e-haiku"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "e2e-haiku"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
