[package]
name = "test-harness-e2e-haiku"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "e2e-haiku"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tools-openapi-client = { path = "../../tools/openapi-client" }
contracts-api-types = { path = "../../contracts/api-types" }
walkdir = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
