[package]
name = "test-harness-metrics-contract"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "test_harness_metrics_contract"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
