[package]
name = "tools-openapi-client"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "tools_openapi_client"
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
contracts-api-types = { path = "../../contracts/api-types" }

[dev-dependencies]
trybuild = "1"
