[package]
name = "tools-readme-index"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
autobins = false

[[bin]]
name = "readme-index"
path = "src/bin.rs"

authors = ["llama-orch contributors"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
toml = "0.8"
thiserror = { workspace = true }
openapiv3 = { workspace = true }
