[package]
name = "worker-adapters-adapter-api"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "worker_adapters_adapter_api"
path = "src/lib.rs"

authors = ["llama-orch contributors"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
contracts-api-types = { path = "../../contracts/api-types" }
thiserror = { workspace = true }
