[package]
name = "worker-adapters-llamacpp-http"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "worker_adapters_llamacpp_http"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
worker-adapters-adapter-api = { path = "../adapter-api" }
contracts-api-types = { path = "../../contracts/api-types" }
