[package]
name = "worker-adapters-mock"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "worker_adapters_mock"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
worker-adapters-adapter-api = { path = "../adapter-api" }
contracts-api-types = { path = "../../contracts/api-types" }
serde_json = { workspace = true }
futures = { workspace = true }
