[package]
name = "worker-adapters-triton"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "worker_adapters_triton"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
orchestrator-core = { path = "../../orchestrator-core" }
contracts-api-types = { path = "../../contracts/api-types" }
